--- a/config/default/core.extension.yml
+++ b/config/default/core.extension.yml
@@ -108,6 +108,7 @@ module:
   google_tag: 0
   help: 0
   image: 0
+  image_captcha: 0
   image_resize_filter: 0
   inline_entity_form: 0
   inline_form_errors: 0
