--- a/config/default/views.view.moderated_content.yml
+++ b/config/default/views.view.moderated_content.yml
@@ -8,6 +8,7 @@ dependencies:
     - node.type.landing_page_lb
     - node.type.language_item
     - node.type.page
+    - workflows.workflow.varbase_editorial_workflow
   module:
     - content_moderation
     - node
@@ -612,7 +613,10 @@ display:
           plugin_id: moderation_state_filter
           operator: in
           value:
-            all: all
+            varbase_editorial_workflow-draft: varbase_editorial_workflow-draft
+            varbase_editorial_workflow-review: varbase_editorial_workflow-review
+            varbase_editorial_workflow-published: varbase_editorial_workflow-published
+            varbase_editorial_workflow-archived: varbase_editorial_workflow-archived
           group: 1
           exposed: true
           expose:
@@ -635,7 +639,6 @@ display:
               seo_admin: '0'
               site_admin: '0'
               test_role: '0'
-              guest_member: '0'
               research_assistant: '0'
               full_member: '0'
               institution_key_contact: '0'
