--- a/config/default/field.field.node.heritage_item.field_related_language_item.yml
+++ b/config/default/field.field.node.heritage_item.field_related_language_item.yml
@@ -5,7 +5,6 @@ dependencies:
   config:
     - field.storage.node.field_related_language_item
     - node.type.heritage_item
-    - node.type.language_item
 id: node.heritage_item.field_related_language_item
 field_name: field_related_language_item
 entity_type: node
@@ -17,13 +16,10 @@ translatable: true
 default_value: {  }
 default_value_callback: ''
 settings:
-  handler: 'default:node'
+  handler: views
   handler_settings:
-    target_bundles:
-      language_item: language_item
-    sort:
-      field: _none
-      direction: ASC
-    auto_create: false
-    auto_create_bundle: ''
+    view:
+      view_name: glossary
+      display_name: entity_reference_1
+      arguments: {  }
 field_type: entity_reference
