--- a/config/default/field.field.node.language_item.field_related_heritage_item.yml
+++ b/config/default/field.field.node.language_item.field_related_heritage_item.yml
@@ -4,7 +4,6 @@ status: true
 dependencies:
   config:
     - field.storage.node.field_related_heritage_item
-    - node.type.heritage_item
     - node.type.language_item
 id: node.language_item.field_related_heritage_item
 field_name: field_related_heritage_item
@@ -17,13 +16,10 @@ translatable: true
 default_value: {  }
 default_value_callback: ''
 settings:
-  handler: 'default:node'
+  handler: views
   handler_settings:
-    target_bundles:
-      heritage_item: heritage_item
-    sort:
-      field: _none
-      direction: ASC
-    auto_create: false
-    auto_create_bundle: ''
+    view:
+      view_name: browse_gks
+      display_name: entity_reference_1
+      arguments: {  }
 field_type: entity_reference
