--- a/config/default/field.field.node.heritage_item.field_related_language_item.yml
+++ b/config/default/field.field.node.heritage_item.field_related_language_item.yml
@@ -19,7 +19,7 @@ settings:
   handler: views
   handler_settings:
     view:
-      view_name: glossary
-      display_name: entity_reference_1
+      view_name: language_items_ref
+      display_name: entity_ref_lang_item
       arguments: {  }
 field_type: entity_reference
