--- a/config/default/core.entity_view_display.node.heritage_item.default.yml
+++ b/config/default/core.entity_view_display.node.heritage_item.default.yml
@@ -56,6 +56,7 @@ dependencies:
     - field.field.node.heritage_item.field_record_creation_notes
     - field.field.node.heritage_item.field_region_of_origin
     - field.field.node.heritage_item.field_region_origin_attribution
+    - field.field.node.heritage_item.field_related_events
     - field.field.node.heritage_item.field_related_extern_lang_items
     - field.field.node.heritage_item.field_related_heritage_item
     - field.field.node.heritage_item.field_related_heritage_out_gks
@@ -115,7 +116,9 @@ third_party_settings:
         - field_date_made
         - field_filter_date_made
         - field_date_attribution
+        - field_related_seasonal_time
         - field_associated_ceremonial_time
+        - field_related_events
         - field_maker_name
         - field_maker_role
         - field_maker_attribution
@@ -160,7 +163,8 @@ third_party_settings:
         - field_geolocation
         - field_related_heritage_out_gks
         - field_related_extern_lang_items
-        - field_related_seasonal_time
+        - field_gks_reference_number
+        - field_share_knowledge_form
     fields:
       node_title:
         plugin_id: node_title
@@ -182,21 +186,21 @@ content:
     label: above
     settings: {  }
     third_party_settings: {  }
-    weight: 31
+    weight: 33
     region: main
   field_access_rationale:
     type: basic_string
     label: above
     settings: {  }
     third_party_settings: {  }
-    weight: 47
+    weight: 49
     region: main
   field_acquired_from:
     type: basic_string
     label: above
     settings: {  }
     third_party_settings: {  }
-    weight: 35
+    weight: 37
     region: main
   field_associated_ceremonial_time:
     type: entity_reference_label
@@ -232,14 +236,14 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 14
+    weight: 15
     region: main
   field_bibliographic_citation:
     type: basic_string
     label: above
     settings: {  }
     third_party_settings: {  }
-    weight: 42
+    weight: 44
     region: main
   field_catalog_id:
     type: string
@@ -263,14 +267,14 @@ content:
     settings:
       link: true
     third_party_settings: {  }
-    weight: 36
+    weight: 38
     region: main
   field_creative_commons_licence:
     type: basic_string
     label: above
     settings: {  }
     third_party_settings: {  }
-    weight: 48
+    weight: 50
     region: main
   field_current_institution:
     type: entity_reference_label
@@ -286,7 +290,7 @@ content:
     settings:
       link_to_entity: false
     third_party_settings: {  }
-    weight: 34
+    weight: 36
     region: main
   field_date_attribution:
     type: basic_string
@@ -301,7 +305,7 @@ content:
     settings:
       link_to_entity: false
     third_party_settings: {  }
-    weight: 37
+    weight: 39
     region: main
   field_date_made:
     type: string
@@ -316,35 +320,35 @@ content:
     label: above
     settings: {  }
     third_party_settings: {  }
-    weight: 28
+    weight: 30
     region: main
   field_description_howtocite:
     type: basic_string
     label: above
     settings: {  }
     third_party_settings: {  }
-    weight: 49
+    weight: 51
     region: main
   field_description_materials:
     type: basic_string
     label: above
     settings: {  }
     third_party_settings: {  }
-    weight: 24
+    weight: 26
     region: main
   field_description_motifs:
     type: basic_string
     label: above
     settings: {  }
     third_party_settings: {  }
-    weight: 25
+    weight: 27
     region: main
   field_description_othernotes:
     type: basic_string
     label: above
     settings: {  }
     third_party_settings: {  }
-    weight: 29
+    weight: 31
     region: main
   field_description_source:
     type: basic_string
@@ -365,28 +369,28 @@ content:
     label: above
     settings: {  }
     third_party_settings: {  }
-    weight: 27
+    weight: 29
     region: main
   field_description_techniques:
     type: basic_string
     label: above
     settings: {  }
     third_party_settings: {  }
-    weight: 26
+    weight: 28
     region: main
   field_dimensions:
     type: physical_dimensions_default
     label: above
     settings: {  }
     third_party_settings: {  }
-    weight: 30
+    weight: 32
     region: main
   field_exhibition_notes:
     type: basic_string
     label: above
     settings: {  }
     third_party_settings: {  }
-    weight: 40
+    weight: 42
     region: main
   field_filter_date_made:
     type: daterange_default
@@ -411,14 +415,14 @@ content:
     settings:
       link: true
     third_party_settings: {  }
-    weight: 52
+    weight: 54
     region: main
   field_function_attribution:
     type: basic_string
     label: above
     settings: {  }
     third_party_settings: {  }
-    weight: 33
+    weight: 35
     region: main
   field_geolocation:
     type: geolocation_map
@@ -989,7 +993,7 @@ content:
             lb: ''
             lb-col: false
             classes: {  }
-    weight: 56
+    weight: 58
     region: main
   field_gks_id:
     type: string
@@ -1006,8 +1010,8 @@ content:
       thousand_separator: ''
       prefix_suffix: true
     third_party_settings: {  }
-    weight: 60
-    region: content
+    weight: 61
+    region: main
   field_identifier_url:
     type: link
     label: above
@@ -1029,7 +1033,7 @@ content:
       image_loading:
         attribute: lazy
     third_party_settings: {  }
-    weight: 53
+    weight: 55
     region: main
   field_item_type:
     type: entity_reference_label
@@ -1044,7 +1048,7 @@ content:
     label: above
     settings: {  }
     third_party_settings: {  }
-    weight: 23
+    weight: 25
     region: main
   field_local_origin_tid:
     type: entity_reference_label
@@ -1052,14 +1056,14 @@ content:
     settings:
       link: true
     third_party_settings: {  }
-    weight: 22
+    weight: 24
     region: main
   field_maker_attribution:
     type: basic_string
     label: above
     settings: {  }
     third_party_settings: {  }
-    weight: 17
+    weight: 19
     region: main
   field_maker_name:
     type: string
@@ -1067,7 +1071,7 @@ content:
     settings:
       link_to_entity: false
     third_party_settings: {  }
-    weight: 15
+    weight: 17
     region: main
   field_maker_role:
     type: entity_reference_label
@@ -1075,7 +1079,7 @@ content:
     settings:
       link: true
     third_party_settings: {  }
-    weight: 16
+    weight: 18
     region: main
   field_media_audio_video_docs_:
     type: entity_reference_entity_view
@@ -1084,7 +1088,7 @@ content:
       view_mode: default
       link: false
     third_party_settings: {  }
-    weight: 55
+    weight: 57
     region: main
   field_media_image_twoc:
     type: entity_reference_entity_view
@@ -1093,14 +1097,14 @@ content:
       view_mode: default
       link: false
     third_party_settings: {  }
-    weight: 54
+    weight: 56
     region: main
   field_nation_rationale:
     type: text_default
     label: above
     settings: {  }
     third_party_settings: {  }
-    weight: 21
+    weight: 23
     region: main
   field_nation_tid:
     type: entity_reference_label
@@ -1108,42 +1112,42 @@ content:
     settings:
       link: true
     third_party_settings: {  }
-    weight: 20
+    weight: 22
     region: main
   field_original_function:
     type: basic_string
     label: above
     settings: {  }
     third_party_settings: {  }
-    weight: 32
+    weight: 34
     region: main
   field_provenance:
     type: basic_string
     label: above
     settings: {  }
     third_party_settings: {  }
-    weight: 38
+    weight: 40
     region: main
   field_publication_history:
     type: basic_string
     label: above
     settings: {  }
     third_party_settings: {  }
-    weight: 41
+    weight: 43
     region: main
   field_record_creation:
     type: basic_string
     label: above
     settings: {  }
     third_party_settings: {  }
-    weight: 44
+    weight: 46
     region: main
   field_record_creation_notes:
     type: basic_string
     label: above
     settings: {  }
     third_party_settings: {  }
-    weight: 45
+    weight: 47
     region: main
   field_region_of_origin:
     type: entity_reference_label
@@ -1151,14 +1155,22 @@ content:
     settings:
       link: true
     third_party_settings: {  }
-    weight: 18
+    weight: 20
     region: main
   field_region_origin_attribution:
     type: text_default
     label: above
     settings: {  }
     third_party_settings: {  }
-    weight: 19
+    weight: 21
+    region: main
+  field_related_events:
+    type: entity_reference_label
+    label: inline
+    settings:
+      link: true
+    third_party_settings: {  }
+    weight: 16
     region: main
   field_related_extern_lang_items:
     type: link
@@ -1170,7 +1182,7 @@ content:
       rel: ''
       target: ''
     third_party_settings: {  }
-    weight: 58
+    weight: 60
     region: main
   field_related_heritage_item:
     type: entity_reference_label
@@ -1178,7 +1190,7 @@ content:
     settings:
       link: true
     third_party_settings: {  }
-    weight: 50
+    weight: 52
     region: main
   field_related_heritage_out_gks:
     type: link
@@ -1190,7 +1202,7 @@ content:
       rel: ''
       target: ''
     third_party_settings: {  }
-    weight: 57
+    weight: 59
     region: main
   field_related_language_item:
     type: entity_reference_label
@@ -1198,7 +1210,7 @@ content:
     settings:
       link: true
     third_party_settings: {  }
-    weight: 51
+    weight: 53
     region: main
   field_related_seasonal_time:
     type: entity_reference_label
@@ -1206,29 +1218,30 @@ content:
     settings:
       link: true
     third_party_settings: {  }
-    weight: 59
+    weight: 14
     region: main
   field_share_knowledge_form:
     type: webform_entity_reference_entity_view
     label: above
     settings:
       source_entity: true
+      lazy: false
     third_party_settings: {  }
-    weight: 61
-    region: content
+    weight: 62
+    region: main
   field_source_coll_his:
     type: basic_string
     label: above
     settings: {  }
     third_party_settings: {  }
-    weight: 39
+    weight: 41
     region: main
   field_sources_exhib_pub_his:
     type: basic_string
     label: above
     settings: {  }
     third_party_settings: {  }
-    weight: 43
+    weight: 45
     region: main
   field_tk_label:
     type: entity_reference_entity_view
@@ -1245,7 +1258,7 @@ content:
             lb: ''
             lb-col: false
             classes: {  }
-    weight: 46
+    weight: 48
     region: main
   links:
     settings: {  }
