--- a/config/default/core.entity_view_display.node.heritage_item.full.yml
+++ b/config/default/core.entity_view_display.node.heritage_item.full.yml
@@ -57,6 +57,7 @@ dependencies:
     - field.field.node.heritage_item.field_record_creation_notes
     - field.field.node.heritage_item.field_region_of_origin
     - field.field.node.heritage_item.field_region_origin_attribution
+    - field.field.node.heritage_item.field_related_events
     - field.field.node.heritage_item.field_related_extern_lang_items
     - field.field.node.heritage_item.field_related_heritage_item
     - field.field.node.heritage_item.field_related_heritage_out_gks
@@ -121,24 +122,27 @@ third_party_settings:
         - field_date_made
         - field_related_seasonal_time
         - field_associated_ceremonial_time
+        - field_related_events
         - field_description_materials
+        - field_description_condition
         - field_description_techniques
         - field_description_motifs
+        - field_description_symbols
         - field_abstract
         - field_dimensions
         - field_original_function
         - field_date_attribution
         - group_provenance
         - group_related_items
-        - group_about_this_grasac_record
-        - field_geolocation
-        - field_share_knowledge_form
         - field_current_institution
         - field_related_heritage_item
+        - group_about_this_grasac_record
         - field_catalog_id
         - field_related_heritage_out_gks
+        - field_geolocation
         - field_identifier_url
         - field_related_language_item
+        - field_share_knowledge_form
         - field_collection
         - field_related_extern_lang_items
         - field_date_acquisition
@@ -161,9 +165,7 @@ third_party_settings:
         - field_bibliographic_citation
         - field_acquired_from
         - field_source_coll_his
-        - field_description_condition
         - field_description_othernotes
-        - field_description_symbols
         - field_local_origin_attribution
         - field_region_origin_attribution
         - field_sources_exhib_pub_his
@@ -240,7 +242,7 @@ third_party_settings:
       label: Provenance
       parent_name: ''
       region: main
-      weight: 23
+      weight: 26
       format_type: tab
       format_settings:
         classes: ''
@@ -257,7 +259,7 @@ third_party_settings:
       label: 'Related Items'
       parent_name: ''
       region: main
-      weight: 24
+      weight: 27
       format_type: tab
       format_settings:
         classes: ''
@@ -280,16 +282,14 @@ third_party_settings:
         - field_bibliographic_citation
         - field_acquired_from
         - field_source_coll_his
-        - field_description_condition
         - field_description_othernotes
-        - field_description_symbols
         - field_local_origin_attribution
         - field_region_origin_attribution
         - field_sources_exhib_pub_his
       label: 'About This GRASAC Record'
       parent_name: ''
       region: main
-      weight: 25
+      weight: 28
       format_type: tab
       format_settings:
         classes: ''
@@ -364,7 +364,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 19
+    weight: 22
     region: main
   field_access_rationale:
     type: advanced_text
@@ -851,7 +851,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 22
+    weight: 25
     region: main
   field_date_collection:
     type: string
@@ -958,7 +958,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 52
+    weight: 18
     region: main
   field_description_howtocite:
     type: advanced_text
@@ -1076,7 +1076,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 16
+    weight: 17
     region: main
   field_description_motifs:
     type: advanced_text
@@ -1135,7 +1135,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 18
+    weight: 20
     region: main
   field_description_othernotes:
     type: advanced_text
@@ -1347,7 +1347,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 54
+    weight: 21
     region: main
   field_description_techniques:
     type: advanced_text
@@ -1406,7 +1406,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 17
+    weight: 19
     region: main
   field_dimensions:
     type: physical_dimensions_default
@@ -1441,7 +1441,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 20
+    weight: 23
     region: main
   field_exhibition_notes:
     type: advanced_text
@@ -2201,7 +2201,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 26
+    weight: 29
     region: main
   field_gks_id:
     type: string
@@ -2765,7 +2765,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 21
+    weight: 24
     region: main
   field_provenance:
     type: advanced_text
@@ -3062,6 +3062,42 @@ content:
             suffix: ''
     weight: 56
     region: main
+  field_related_events:
+    type: entity_reference_label
+    label: inline
+    settings:
+      link: true
+    third_party_settings:
+      ds:
+        ft:
+          id: expert
+          settings:
+            lb: ''
+            lbw: true
+            lbw-el: strong
+            lbw-cl: ''
+            lbw-at: ''
+            lb-col: true
+            ow: true
+            ow-el: ''
+            ow-cl: field-outer
+            ow-at: ''
+            ow-def-at: true
+            ow-def-cl: true
+            fis: false
+            fis-el: ''
+            fis-cl: ''
+            fis-at: ''
+            fis-def-at: false
+            fi: false
+            fi-el: ''
+            fi-cl: ''
+            fi-at: ''
+            fi-def-at: false
+            prefix: ''
+            suffix: ''
+    weight: 16
+    region: main
   field_related_extern_lang_items:
     type: link
     label: above
@@ -3225,6 +3261,7 @@ content:
       link: true
     third_party_settings:
       ds:
+        ds_limit: ''
         ft:
           id: expert
           settings:
@@ -3233,7 +3270,7 @@ content:
             lbw-el: strong
             lbw-cl: ''
             lbw-at: ''
-            lb-col: true
+            lb-col: false
             ow: true
             ow-el: ''
             ow-cl: field-outer
@@ -3245,8 +3282,8 @@ content:
             fis-cl: ''
             fis-at: ''
             fis-def-at: false
-            fi: false
-            fi-el: ''
+            fi: true
+            fi-el: /br
             fi-cl: ''
             fi-at: ''
             fi-def-at: false
@@ -3295,7 +3332,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 27
+    weight: 30
     region: main
   field_source_coll_his:
     type: advanced_text
