--- a/config/default/field.field.node.heritage_item.field_associated_ceremonial_time.yml
+++ b/config/default/field.field.node.heritage_item.field_associated_ceremonial_time.yml
@@ -10,8 +10,8 @@ id: node.heritage_item.field_associated_ceremonial_time
 field_name: field_associated_ceremonial_time
 entity_type: node
 bundle: heritage_item
-label: 'Related events'
-description: ''
+label: 'Ceremonial time'
+description: 'Related Ceremonial time for this item'
 required: false
 translatable: false
 default_value: {  }
