--- a/config/default/core.entity_view_display.node.heritage_item.full.yml
+++ b/config/default/core.entity_view_display.node.heritage_item.full.yml
@@ -113,6 +113,7 @@ third_party_settings:
         - field_image2
         - field_media_audio_video_docs_
         - field_description_summary
+        - field_tk_label
         - field_maker_name
         - field_maker_role
         - field_nation_tid
@@ -123,26 +124,27 @@ third_party_settings:
         - field_related_seasonal_time
         - field_associated_ceremonial_time
         - field_related_events
+        - group_read_more_about_this
         - field_description_materials
         - field_description_condition
+        - group_provenance
         - field_description_techniques
+        - group_related_items
         - field_description_motifs
+        - group_about_this_grasac_record
         - field_description_symbols
+        - field_geolocation
         - field_abstract
+        - field_share_knowledge_form
         - field_dimensions
         - field_original_function
         - field_date_attribution
-        - group_provenance
-        - group_related_items
         - field_current_institution
         - field_related_heritage_item
-        - group_about_this_grasac_record
         - field_catalog_id
         - field_related_heritage_out_gks
-        - field_geolocation
         - field_identifier_url
         - field_related_language_item
-        - field_share_knowledge_form
         - field_collection
         - field_related_extern_lang_items
         - field_date_acquisition
@@ -157,7 +159,6 @@ third_party_settings:
         - field_description_howtocite
         - field_record_creation
         - field_record_creation_notes
-        - field_tk_label
         - field_access_rationale
         - field_creative_commons_licence
         - field_folders
@@ -242,7 +243,7 @@ third_party_settings:
       label: Provenance
       parent_name: ''
       region: main
-      weight: 26
+      weight: 19
       format_type: tab
       format_settings:
         classes: ''
@@ -259,7 +260,7 @@ third_party_settings:
       label: 'Related Items'
       parent_name: ''
       region: main
-      weight: 27
+      weight: 20
       format_type: tab
       format_settings:
         classes: ''
@@ -274,7 +275,6 @@ third_party_settings:
         - field_description_howtocite
         - field_record_creation
         - field_record_creation_notes
-        - field_tk_label
         - field_access_rationale
         - field_creative_commons_licence
         - field_folders
@@ -289,12 +289,34 @@ third_party_settings:
       label: 'About This GRASAC Record'
       parent_name: ''
       region: main
-      weight: 28
+      weight: 21
       format_type: tab
       format_settings:
         classes: ''
         show_empty_fields: false
         id: about_this_record_group
+        formatter: closed
+        description: ''
+    group_read_more_about_this:
+      children:
+        - field_description_materials
+        - field_description_condition
+        - field_description_techniques
+        - field_description_motifs
+        - field_description_symbols
+        - field_abstract
+        - field_dimensions
+        - field_original_function
+        - field_date_attribution
+      label: 'Read More About This Relative'
+      parent_name: ''
+      region: main
+      weight: 18
+      format_type: tab
+      format_settings:
+        classes: ''
+        show_empty_fields: false
+        id: readmore_materials_tab
         formatter: closed
         description: ''
 id: node.heritage_item.full
@@ -364,7 +386,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 22
+    weight: 23
     region: main
   field_access_rationale:
     type: advanced_text
@@ -494,7 +516,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 15
+    weight: 16
     region: main
   field_bibliographic_citation:
     type: advanced_text
@@ -851,7 +873,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 25
+    weight: 26
     region: main
   field_date_collection:
     type: string
@@ -923,7 +945,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 13
+    weight: 14
     region: main
   field_description_condition:
     type: basic_string
@@ -958,7 +980,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 18
+    weight: 19
     region: main
   field_description_howtocite:
     type: advanced_text
@@ -1076,7 +1098,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 17
+    weight: 18
     region: main
   field_description_motifs:
     type: advanced_text
@@ -1135,7 +1157,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 20
+    weight: 21
     region: main
   field_description_othernotes:
     type: advanced_text
@@ -1347,7 +1369,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 21
+    weight: 22
     region: main
   field_description_techniques:
     type: advanced_text
@@ -1406,7 +1428,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 19
+    weight: 20
     region: main
   field_dimensions:
     type: physical_dimensions_default
@@ -1441,7 +1463,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 23
+    weight: 24
     region: main
   field_exhibition_notes:
     type: advanced_text
@@ -2201,7 +2223,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 29
+    weight: 22
     region: main
   field_gks_id:
     type: string
@@ -2447,7 +2469,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 11
+    weight: 12
     region: main
   field_maker_attribution:
     type: advanced_text
@@ -2506,7 +2528,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 12
+    weight: 13
     region: main
   field_maker_name:
     type: string
@@ -2542,7 +2564,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 7
+    weight: 8
     region: main
   field_maker_role:
     type: entity_reference_label
@@ -2579,7 +2601,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 8
+    weight: 9
     region: main
   field_media_audio_video_docs_:
     type: entity_reference_entity_view
@@ -2669,7 +2691,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 10
+    weight: 11
     region: main
   field_nation_tid:
     type: entity_reference_label
@@ -2706,7 +2728,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 9
+    weight: 10
     region: main
   field_original_function:
     type: advanced_text
@@ -2765,7 +2787,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 24
+    weight: 25
     region: main
   field_provenance:
     type: advanced_text
@@ -3096,7 +3118,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 16
+    weight: 17
     region: main
   field_related_extern_lang_items:
     type: link
@@ -3289,7 +3311,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 14
+    weight: 15
     region: main
   field_share_knowledge_form:
     type: webform_entity_reference_link
@@ -3332,7 +3354,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 30
+    weight: 23
     region: main
   field_source_coll_his:
     type: advanced_text
@@ -3488,7 +3510,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 44
+    weight: 7
     region: main
   links:
     settings: {  }
