--- a/config/default/core.entity_view_display.node.heritage_item.full.yml
+++ b/config/default/core.entity_view_display.node.heritage_item.full.yml
@@ -67,6 +67,7 @@ dependencies:
     - field.field.node.heritage_item.field_source_coll_his
     - field.field.node.heritage_item.field_sources_exhib_pub_his
     - field.field.node.heritage_item.field_tk_label
+    - field.field.node.heritage_item.field_weght
     - filter.format.plain_text
     - node.type.heritage_item
     - responsive_image.styles.d02
@@ -124,20 +125,23 @@ third_party_settings:
         - field_related_seasonal_time
         - field_associated_ceremonial_time
         - field_related_events
-        - group_read_more_about_this
+        - field_description_source
         - field_description_materials
-        - field_description_condition
-        - group_provenance
+        - group_read_more_about_this
         - field_description_techniques
-        - group_related_items
         - field_description_motifs
-        - group_about_this_grasac_record
+        - group_provenance
         - field_description_symbols
-        - field_geolocation
+        - group_related_items
         - field_abstract
-        - field_share_knowledge_form
-        - field_dimensions
+        - group_about_this_grasac_record
         - field_original_function
+        - field_geolocation
+        - field_dimensions
+        - field_region_origin_attribution
+        - field_weght
+        - field_share_knowledge_form
+        - field_description_condition
         - field_date_attribution
         - field_current_institution
         - field_related_heritage_item
@@ -148,28 +152,26 @@ third_party_settings:
         - field_collection
         - field_related_extern_lang_items
         - field_date_acquisition
+        - field_acquired_from
+        - field_source_coll_his
         - field_date_collection
         - field_contributor_collector
         - field_provenance
         - field_function_attribution
         - field_exhibition_notes
-        - field_publication_history
         - field_gks_reference_number
+        - field_publication_history
         - field_gks_id
+        - field_sources_exhib_pub_his
         - field_description_howtocite
+        - field_bibliographic_citation
         - field_record_creation
         - field_record_creation_notes
         - field_access_rationale
         - field_creative_commons_licence
         - field_folders
-        - field_description_source
-        - field_bibliographic_citation
-        - field_acquired_from
-        - field_source_coll_his
         - field_description_othernotes
         - field_local_origin_attribution
-        - field_region_origin_attribution
-        - field_sources_exhib_pub_his
     fields:
       'display_field_copy:node-images_clone':
         plugin_id: 'display_field_copy:node-images_clone'
@@ -234,16 +236,20 @@ third_party_settings:
         - field_identifier_url
         - field_collection
         - field_date_acquisition
+        - field_acquired_from
+        - field_source_coll_his
         - field_date_collection
         - field_contributor_collector
         - field_provenance
         - field_function_attribution
         - field_exhibition_notes
         - field_publication_history
+        - field_sources_exhib_pub_his
+        - field_bibliographic_citation
       label: Provenance
       parent_name: ''
       region: main
-      weight: 19
+      weight: 20
       format_type: tab
       format_settings:
         classes: ''
@@ -260,7 +266,7 @@ third_party_settings:
       label: 'Related Items'
       parent_name: ''
       region: main
-      weight: 20
+      weight: 21
       format_type: tab
       format_settings:
         classes: ''
@@ -278,18 +284,12 @@ third_party_settings:
         - field_access_rationale
         - field_creative_commons_licence
         - field_folders
-        - field_description_source
-        - field_bibliographic_citation
-        - field_acquired_from
-        - field_source_coll_his
         - field_description_othernotes
         - field_local_origin_attribution
-        - field_region_origin_attribution
-        - field_sources_exhib_pub_his
       label: 'About This GRASAC Record'
       parent_name: ''
       region: main
-      weight: 21
+      weight: 22
       format_type: tab
       format_settings:
         classes: ''
@@ -300,18 +300,19 @@ third_party_settings:
     group_read_more_about_this:
       children:
         - field_description_materials
-        - field_description_condition
         - field_description_techniques
         - field_description_motifs
         - field_description_symbols
         - field_abstract
-        - field_dimensions
         - field_original_function
+        - field_dimensions
+        - field_weght
+        - field_description_condition
         - field_date_attribution
       label: 'Read More About This Relative'
       parent_name: ''
       region: main
-      weight: 18
+      weight: 19
       format_type: tab
       format_settings:
         classes: ''
@@ -386,7 +387,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 23
+    weight: 22
     region: main
   field_access_rationale:
     type: advanced_text
@@ -480,7 +481,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 50
+    weight: 33
     region: main
   field_associated_ceremonial_time:
     type: entity_reference_label
@@ -575,7 +576,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 49
+    weight: 42
     region: main
   field_catalog_id:
     type: string
@@ -683,7 +684,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 34
+    weight: 36
     region: main
   field_creative_commons_licence:
     type: advanced_text
@@ -873,7 +874,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 26
+    weight: 27
     region: main
   field_date_collection:
     type: string
@@ -909,7 +910,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 33
+    weight: 35
     region: main
   field_date_made:
     type: string
@@ -980,7 +981,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 19
+    weight: 26
     region: main
   field_description_howtocite:
     type: advanced_text
@@ -1157,7 +1158,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 21
+    weight: 20
     region: main
   field_description_othernotes:
     type: advanced_text
@@ -1275,7 +1276,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 48
+    weight: 18
     region: main
   field_description_summary:
     type: text_default
@@ -1369,7 +1370,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 22
+    weight: 21
     region: main
   field_description_techniques:
     type: advanced_text
@@ -1428,7 +1429,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 20
+    weight: 19
     region: main
   field_dimensions:
     type: physical_dimensions_default
@@ -1522,7 +1523,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 37
+    weight: 39
     region: main
   field_folders:
     type: entity_reference_label
@@ -1618,7 +1619,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 36
+    weight: 38
     region: main
   field_geolocation:
     type: geolocation_map
@@ -2223,7 +2224,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 22
+    weight: 23
     region: main
   field_gks_id:
     type: string
@@ -2787,7 +2788,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 25
+    weight: 23
     region: main
   field_provenance:
     type: advanced_text
@@ -2846,7 +2847,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 35
+    weight: 37
     region: main
   field_publication_history:
     type: advanced_text
@@ -2905,7 +2906,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 38
+    weight: 40
     region: main
   field_record_creation:
     type: advanced_text
@@ -3082,7 +3083,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 56
+    weight: 24
     region: main
   field_related_events:
     type: entity_reference_label
@@ -3354,7 +3355,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 23
+    weight: 25
     region: main
   field_source_coll_his:
     type: advanced_text
@@ -3413,7 +3414,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 51
+    weight: 34
     region: main
   field_sources_exhib_pub_his:
     type: advanced_text
@@ -3472,7 +3473,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 57
+    weight: 41
     region: main
   field_tk_label:
     type: entity_reference_entity_view
@@ -3511,6 +3512,41 @@ content:
             prefix: ''
             suffix: ''
     weight: 7
+    region: main
+  field_weght:
+    type: physical_measurement_default
+    label: above
+    settings: {  }
+    third_party_settings:
+      ds:
+        ft:
+          id: expert
+          settings:
+            lb: ''
+            lbw: true
+            lbw-el: strong
+            lbw-cl: ''
+            lbw-at: ''
+            lb-col: true
+            ow: true
+            ow-el: ''
+            ow-cl: field-outer
+            ow-at: ''
+            ow-def-at: true
+            ow-def-cl: true
+            fis: false
+            fis-el: ''
+            fis-cl: ''
+            fis-at: ''
+            fis-def-at: false
+            fi: false
+            fi-el: ''
+            fi-cl: ''
+            fi-at: ''
+            fi-def-at: false
+            prefix: ''
+            suffix: ''
+    weight: 25
     region: main
   links:
     settings: {  }
