updated config after initial multiple modules update for varbase

--- a/config/default/charts.settings.yml
+++ b/config/default/charts.settings.yml
@@ -51,4 +51,7 @@ charts_default_settings:
   library_config: {  }
 advanced:
   debug: false
+dependencies:
+  module:
+    - charts_c3
 library_config: null
