--- a/config/default/views.view.varbase_google_analytics_summary.yml
+++ b/config/default/views.view.varbase_google_analytics_summary.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   module:
     - charts
+    - charts_c3
     - google_analytics_reports
     - user
     - views_bootstrap
