--- a/config/default/filter.format.code_html.yml
+++ b/config/default/filter.format.code_html.yml
@@ -76,6 +76,7 @@ filters:
       local_settings:
         protocol_style: full
         local_paths: ''
+        keep_language_prefix: false
   filter_image_resize:
     id: filter_image_resize
     provider: image_resize_filter
@@ -209,6 +210,7 @@ filters:
       width: 700px
       font_size: 12pt
       line_numbers: '1'
-      print_margins: '1'
       show_invisibles: '0'
+      print_margins: '1'
+      auto_complete: '1'
       use_wrap_mode: '1'
