--- a/config/default/metatag.metatag_defaults.front.yml
+++ b/config/default/metatag.metatag_defaults.front.yml
@@ -1,3 +1,4 @@
+uuid: null
 langcode: en
 status: true
 dependencies: {  }
@@ -7,8 +8,6 @@ tags:
   shortlink: '[site:url]'
   title: '[site:name] | [site:slogan]'
   canonical_url: '[site:url]'
-  google_plus_name: '[site:name] | [site:slogan]'
   og_url: '[site:url]'
   og_title: '[site:name] | [site:slogan]'
-  twitter_cards_page_url: '[site:url]'
   twitter_cards_title: '[site:name] | [site:slogan]'
