--- a/config/default/metatag.metatag_defaults.global.yml
+++ b/config/default/metatag.metatag_defaults.global.yml
@@ -1,3 +1,4 @@
+uuid: null
 langcode: en
 status: true
 dependencies: {  }
@@ -20,7 +21,6 @@ tags:
   og_image: '[site:origin-url]/[default-active-theme:path]/share-image.png'
   og_url: '[current-page:url:absolute]'
   og_image_url: '[site:origin-url]/[default-active-theme:path]/share-image.png'
-  twitter_cards_page_url: '[current-page:url:absolute]'
   twitter_cards_image: '[site:origin-url]/[default-active-theme:path]/share-image.png'
   twitter_cards_title: '[current-page:title] | [site:name]'
   twitter_cards_type: summary
