--- a/config/default/pathologic.settings.yml
+++ b/config/default/pathologic.settings.yml
@@ -1,7 +1,8 @@
-scheme_whitelist:
+scheme_allow_list:
   - http
   - https
   - files
   - internal
 protocol_style: path
 local_paths: ''
+keep_language_prefix: false
